<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTeacherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/fac"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"

            android:id="@+id/addTeacherImage"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addTeacherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addTeacherPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/postname" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addTeacherEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addTeacherCategory"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center"
            android:layout_marginVertical="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addfaculty"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:id="@+id/addTeacherBtn"/>

    </LinearLayout>

</ScrollView>