<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/textColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/akgec"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/administration"
            android:textColor="@color/akgecblack"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:fontFamily="@font/donglebold"
            />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/lightgrey"
            android:textColor="@color/akgecblack"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/edit"
            android:padding="20dp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/user_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/lightgrey"
            android:textColor="@color/akgecblack"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit"
            android:padding="20dp"
            android:autofillHints="" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/akgecyellow"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_marginRight="35dp"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            />

    </LinearLayout>

</LinearLayout>