<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:layout_weight="1.5"
                android:orientation="vertical"
                android:gravity="center_vertical"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/teacherName"
                    android:text="@string/garv_singh"
                    android:textColor="@color/textcolor"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/teacherPost"
                    android:text="@string/student"
                    android:textColor="@color/textcolor"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/teacherEmail"
                    android:text="@string/gtiians_gmail_com"
                    android:textColor="@color/textcolor"
                    android:textSize="18sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/teacherUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_info"
                    android:layout_marginVertical="4dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/teacherImage"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:src="@drawable/fac"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcc00"
            android:layout_marginVertical="8dp"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>