<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/akgec"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/akgec_notice"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:textColor="@color/textcolor"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginStart="-100dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        </LinearLayout>


        <TextView
            android:id="@+id/deleteNoticeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_akgec_news_feed"
            android:textSize="17sp"
            android:textColor="@color/textcolor"/>

        <ImageView
            android:id="@+id/deleteNoticeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription" />


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>